Blur effect + Fixed Spacing

--- a/index.css
+++ b/index.css
@@ -16,6 +16,9 @@ body {
 .main {
     background-image: url("static files/bkgrd 1.png"), url("static files/bkgrd 2.png"), url("static files/bkgrd 3.png");
     background-size: 100%;
+    top: 0;
+  z-index: 0;
+  transition: all 0.3s ease-in;
 }
 
 .container {
@@ -316,6 +319,36 @@ body {
     transform: translateY(0);
 } */
 
+/* Blur modal effect 
+
+body>div.speaker {
+    
+    top: 0;
+    z-index: 2;
+  }
+
+body.modal-open> .main,.modal-backdrop.fade.show {
+    z-index: 1;
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    background-color: #e8e8e8d9;
+}
+
+.modalblur {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 2px 2px 0px 2px rgba(255, 255, 255, 0.6);
+}
+*/
+
+.blur {
+	backdrop-filter: blur(5px);
+	opacity: 1!important;
+	background: rgba(255,255,255,0.1);
+}
+
+
+
 .modal-content {
     color: black;
     display: flex;
@@ -426,12 +459,12 @@ footer {
     margin-left: 10px;
 }
 
-/* this is replaced now by dhruvesh
 
 .speaker {
-    position: relative;
     
+    margin-top: 50px;margin-bottom: 50px;    
 }
+/* this is replaced now by dhruvesh
 .speaker-info{
     display: flex;
     flex-wrap: wrap;
